added more options

--- a/spotify.html
+++ b/spotify.html
@@ -35,8 +35,12 @@
       <div class="left">
         <h1>Your Library</h1>
         <div class="scroll">
-          <div class="box1"></div>
-          <div class="box2"></div>
+          <div class="boxes">
+            <span>Create your first playlist</span>
+            <span>It's easy, we'll help you</span>
+            <button class="login">Create playlist</button>
+          </div>
+          <div class="boxes"> box2</div>
         </div>
         <div class="legal">
           <div>
