added library and Js

--- a/spotify.html
+++ b/spotify.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -40,7 +41,12 @@
             <span>It's easy, we'll help you</span>
             <button class="login">Create playlist</button>
           </div>
-          <div class="boxes"> box2</div>
+          <div class="boxes">
+            <span>Let's find some podcasts to follow</span>
+            <span>We'll keep you updated on new episodes</span>
+            <button class="login">Browse podcasts</button>
+            
+          </div>
         </div>
         <div class="legal">
           <div>
@@ -73,7 +79,16 @@
           </div>
         </div>
       </div>
-      <div class="right"></div>
+      <div class="right">
+        <h1>Trending songs</h1>
+        <div class="songs">
+          <div class="card">
+            <img src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
+            <h2>Thodi Si Daaru</h2>
+            <p>AP Dhillon , Shreya Ghosal</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
