--- a/spotify.html
+++ b/spotify.html
@@ -88,6 +88,12 @@
             <p>AP Dhillon , Shreya Ghosal</p>
           </div>
         </div>
+        <div class="playbar">
+          <img src="prev.svg" alt="">
+          <img src="play.svg" id="play"alt="">
+          <img src="pause.svg" id="pause" alt="">
+          <img src="next.svg" alt="">
+        </div>
       </div>
     </div>
   </body>
