--- a/spotify.html
+++ b/spotify.html
@@ -83,9 +83,16 @@
         <h1>Trending songs</h1>
         <div class="songs">
           <div class="card">
-            <img src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
-            <h2>Thodi Si Daaru</h2>
-            <p>AP Dhillon , Shreya Ghosal</p>
+            <img class="poster" src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
+            <img class="play-popup" src="playPopup.png"  alt="">
+            <h2 class="song-title">Thodi Si Daaru</h2>
+            <p class="song-title">AP Dhillon , Shreya Ghosal</p>
+          </div>
+          <div class="card">
+            <img class="poster" src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
+            <img class="play-popup" src="playPopup.png"  alt="">
+            <h2 class="song-title">Thodi Si Daaru</h2>
+            <p class="song-title">AP Dhillon , Shreya Ghosal</p>
           </div>
         </div>
         <div class="playbar">
