added songs and icons

--- a/spotify.html
+++ b/spotify.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <img src="logo.svg" class="logo" alt="logo" />
+      <img src="logo_icons/logo.svg" class="logo" alt="logo" />
       <div class="bar">
         <img src="home.svg" alt="" height="28px" />
         <div class="search">
@@ -18,14 +18,14 @@
             class="box"
             placeholder="         What do you want to play?"
           />
-          <img src="search.svg" alt="img" />
+          <img src="logo_icons/search.svg" alt="img" />
         </div>
       </div>
       <div class="about">Premium</div>
       <div class="about">Support</div>
       <div class="about">Download</div>
       <div class="about">
-        <img src="install.svg" alt="" />
+        <img src="logo_icons/install.svg" alt="" />
         Install App
       </div>
       <div class="about">Sign Up</div>
@@ -82,24 +82,38 @@
       <div class="right">
         <h1>Trending songs</h1>
         <div class="songs">
-          <div class="card">
-            <img class="poster" src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
-            <img class="play-popup" src="playPopup.png"  alt="">
-            <h2 class="song-title">Thodi Si Daaru</h2>
-            <p class="song-title">AP Dhillon , Shreya Ghosal</p>
+          <div class="card" data-index="0">
+            <img class="poster" src="https://c.saavncdn.com/740/Admirin-You-feat-Preston-Pablo-Punjabi-2023-20230730053753-500x500.jpg" alt="img">
+            <img class="play-popup" src="logo_icons/playPopup.png"  alt="">
+            <img class="pause-popup" style="filter: invert(53%) sepia(61%) saturate(499%) hue-rotate(79deg) brightness(108%) contrast(85%);"  srcset="https://img.icons8.com/?size=50&amp;id=36268&amp;format=png 1x, https://img.icons8.com/?size=100&amp;id=36268&amp;format=png 2x" width="50" height="50" alt="Pause Button icon">
+            <h2 class="song-title">Admirin' You</h2>
+            <p class="song-title">Karan Aujla</p>
           </div>
-          <div class="card">
-            <img class="poster" src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="img">
-            <img class="play-popup" src="playPopup.png"  alt="">
-            <h2 class="song-title">Thodi Si Daaru</h2>
-            <p class="song-title">AP Dhillon , Shreya Ghosal</p>
+          <div class="card" data-index="1">
+            <img class="poster" src="https://c.saavncdn.com/541/High-On-You-Punjabi-2024-20241211183544-500x500.jpg" alt="img">
+            <img class="play-popup" src="logo_icons/playPopup.png"  alt="">
+            <img class="pause-popup" style="filter: invert(53%) sepia(61%) saturate(499%) hue-rotate(79deg) brightness(108%) contrast(85%);"  srcset="https://img.icons8.com/?size=50&amp;id=36268&amp;format=png 1x, https://img.icons8.com/?size=100&amp;id=36268&amp;format=png 2x" width="50" height="50" alt="Pause Button icon">
+            <h2 class="song-title">High On You</h2>
+            <p class="song-title">Jind Universe</p>
+          </div>
+          <div class="card" data-index="2">
+            <img class="poster" src="https://c.saavncdn.com/140/Sahiba-Hindi-2023-20231213191015-500x500.jpg" alt="img">
+            <img class="play-popup" src="logo_icons/playPopup.png"  alt="">
+            <img class="pause-popup" style="filter: invert(53%) sepia(61%) saturate(499%) hue-rotate(79deg) brightness(108%) contrast(85%);"  srcset="https://img.icons8.com/?size=50&amp;id=36268&amp;format=png 1x, https://img.icons8.com/?size=100&amp;id=36268&amp;format=png 2x" width="50" height="50" alt="Pause Button icon">
+            <h2 class="song-title">Sahiba</h2>
+            <p class="song-title">Aditya Rikhari</p>
+          </div>
+          <div class="card" data-index="3">
+            <img class="poster" src="https://c.saavncdn.com/587/Thodi-Si-Daaru-Punjabi-2025-20250717063530-500x500.jpg" alt="img">
+            <img class="play-popup" src="logo_icons/playPopup.png"  alt="">
+            <img class="pause-popup" style="filter: invert(53%) sepia(61%) saturate(499%) hue-rotate(79deg) brightness(108%) contrast(85%);"  srcset="https://img.icons8.com/?size=50&amp;id=36268&amp;format=png 1x, https://img.icons8.com/?size=100&amp;id=36268&amp;format=png 2x" width="50" height="50" alt="Pause Button icon">
+            <h2 class="song-title">Thodi Si Daru</h2>
+            <p class="song-title">AP Dhillon , Shreya Ghoshal</p>
           </div>
         </div>
         <div class="playbar">
-          <img src="prev.svg" alt="">
-          <img src="play.svg" id="play"alt="">
-          <img src="pause.svg" id="pause" alt="">
-          <img src="next.svg" alt="">
+          <img src="logo_icons/play.svg" id="play"alt="">
+          <img src="logo_icons/pause.svg" id="pause" alt="">
         </div>
       </div>
     </div>
