--- a/spotify.html
+++ b/spotify.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
       <img src="logo_icons/logo.svg" class="logo" alt="logo" />
       <div class="bar">
-        <img src="home.svg" alt="" height="28px" />
+        <img src="logo_icons/home.svg" alt="" height="28px" />
         <div class="search">
           <input
             type="text"
@@ -112,8 +112,17 @@
           </div>
         </div>
         <div class="playbar">
+          <div class="songinfo">--:---
+          </div>
           <img src="logo_icons/play.svg" id="play"alt="">
           <img src="logo_icons/pause.svg" id="pause" alt="">
+          <div class="songtime">
+            00:00
+          </div>
+          <div class="seekbar">
+            <div class="circle"></div>
+
+          </div>
         </div>
       </div>
     </div>
