--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <nav class="navbar">
       <img src="logo_icons/logo.svg" class="logo" alt="logo" />
       <div class="bar">
-        <img src="logo_icons/home.svg" alt="" height="28px" />
+        <img src="logo_icons/home.svg" alt="" height="28px" class="home" />
+        <img src="logo_icons/hamburger-svgrepo-com.svg" height="40px" class="ham"  alt="">
         <div class="search">
           <input
             type="text"
