--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify Clone</title>
+    <title>Music-player</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
     <nav class="navbar">
-      <img src="logo_icons/logo.svg" class="logo" alt="logo" />
+      <!-- Because of phishing and copyright issues Logo is removed -->
+      <!-- <img src="logo_icons/logo.svg" class="logo" alt="logo" /> -->
       <div class="bar">
         <img src="logo_icons/home.svg" alt="" height="28px" class="home" />
         <img src="logo_icons/hamburger-svgrepo-com.svg" height="40px" class="ham"  alt="">
@@ -38,43 +39,43 @@
         <h1>Your Library</h1>
         <div class="scroll">
           <div class="boxes">
-            <span>Create your first playlist</span>
-            <span>It's easy, we'll help you</span>
+            <span>Lorem ipsum dolor sit.</span>
+            <span>Lorem ipsum dolor sit amet.</span>
             <button class="login">Create playlist</button>
           </div>
           <div class="boxes">
-            <span>Let's find some podcasts to follow</span>
-            <span>We'll keep you updated on new episodes</span>
+            <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+            <span>Lorem ipsum dolor sit amet consectetur.</span>
             <button class="login">Browse podcasts</button>
             
           </div>
         </div>
         <div class="legal">
           <div>
-            <a href="https://www.spotify.com/in-en/legal/">Legal</a>
+            <a href="#">Legal</a>
           </div>
           <div>
-            <a href="https://www.spotify.com/in-en/safetyandprivacy/"
+            <a href="#"
               >Safety & Privacy Center</a
             >
           </div>
           <div>
-            <a href="https://www.spotify.com/in-en/legal/privacy-policy/"
+            <a href="#"
               >Privacy Policy</a
             >
           </div>
           <div>
-            <a href="https://www.spotify.com/in-en/legal/cookies-policy/"
+            <a href="#"
               >Cookies</a
             >
           </div>
           <div>
-            <a href="https://www.spotify.com/in-en/legal/privacy-policy/#s3"
+            <a href="#"
               >About Ads</a
             >
           </div>
           <div>
-            <a href="https://www.spotify.com/in-en/accessibility/"
+            <a href="#"
               >Accessibility</a
             >
           </div>
@@ -112,8 +113,11 @@
             <p class="song-title">AP Dhillon , Shreya Ghoshal</p>
           </div>
         </div>
+        <div class="disclaimer">
+          **This is a student project for learning purpose only.The design and content are used solely for educational demonstartion. 
+        </div>
         <div class="playbar">
-          <div class="songinfo">--:---
+          <div class="songinfo">--:--
           </div>
           <img src="logo_icons/play.svg" id="play"alt="">
           <img src="logo_icons/pause.svg" id="pause" alt="">
